--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<h1>gavin cole's digital media protfolio</h1>
   </div>
   <div class="nav">
-    <h3> <a href="https://www.w3schools.com">Visit W3Schools.com!</a>raster | Vector | Audio | Animation | Video </h3>
+    <h3> <a href="raster">Visit W3Schools.com!</a>raster | Vector | Audio | Animation | Video </h3>
   </div>
   <div class="content">Hello World!</div>
   <div class="footer">
