--- a/animation/index.html
+++ b/animation/index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html class="homePage">
+<head>
+	<!-- This is a comment! Text here will be ignored by the browser. -->
+	<meta charset="UTF-8">
+	<title>gavin cole's digital media protfolio</title>
+	<link href="myCSS.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<div class="container">
+  <div class="header">
+  	<h1>gavin cole's digital media protfolio</h1>
+  </div>
+  <div class="nav">
+    <h3> <a href="raster" | Vector | Audio | Animation | Video </h3>
+  </div>
+  <div class="content">Hello World!</div>
+  <div class="footer">
+    <h4>About Me | Contact | Copyright 2023</h4>
+  </div>
+</div>
+</body>
+</html>
