--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<h1>gavin cole's digital media protfolio</h1>
   </div>
   <div class="nav">
-    <h3> raster | Vector | Audio | Animation | Video </h3>
+    <h3> Raster | Vector | Audio | Animation | Video </h3>
   </div>
   <div class="content">Hello World!</div>
   <div class="footer">
