--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title>gavin cole's digital media protfolio</title>
+	<title>luigiboiyt's mearch store</title>
 	<link href="myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
