--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <div class="header">
-  	<h1>gavin cole's digital media protfolio</h1>
+  	<h1>luigiboiyt's mearch store</h1>
   </div>
   <div class="nav">
     <h3> <a href="Raster">Visit W3Schools.com!</a> | Vector | Audio | Animation | Video </h3>
