--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<h1>luigiboiyt's merch store</h1>
   </div>
   <div class="nav">
-    <h3> <a href="Raster">Visit W3Schools.com!</a> | Vector | Audio | Animation | Video </h3>
+    <h3> Raster| Vector | Audio | Animation | Video </h3>
   </div>
   <div class="content">this is some nice merch yes?!</div>
   <div class="footer">
