--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="nav">
     <h3> Raster| Vector | Audio | Animation | Video </h3>
   </div>
-  <div class="content">this is some nice merch yes?!</div>
+  <div class="content">this is some nice merch yes?</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
