--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title>luigiboiyt's mearch store</title>
+	<title>gavin cole's digital media protfolio</title>
 	<link href="myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container">
   <div class="header">
-  	<h1>luigiboiyt's merch store</h1>
+  	<h1>gavin cole's digital media protfolio</h1>
   </div>
   <div class="nav">
     <h3> Raster| Vector | Audio | Animation | Video </h3>
   </div>
-  <div class="content">this is some nice merch yes?</div>
+  <div class="content">hello world</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
