--- a/video/index.html
+++ b/video/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html class="homePage">
 <head>
-	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title>gavin cole's digital media protfolio</title>
+	<title>gavin cole's digital media portfolio</title>
 	<link href="myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container">
   <div class="header">
-  	<h1>gavin cole's digital media protfolio</h1>
+  	<h1>gavin cole's digital media portfolio</h1>
   </div>
   <div class="nav">
-    <h3> Raster| Vector | Audio | Animation | Video </h3>
+    <h3>
+      <a href="#raster">Raster</a> |
+      <a href="#vector">Vector</a> |
+      <a href="#audio">Audio</a> |
+      <a href="#animation">Animation</a> |
+      <a href="#video">Video</a>
+    </h3>
   </div>
   <div class="content">hello world</div>
   <div class="footer">
-    <h4>About Me | Contact | Copyright 2023</h4>
+    <h4>
+      <a href="#about">About Me</a> | 
+      <a href="#contact">Contact</a> | 
+      Copyright 2023
+    </h4>
   </div>
 </div>
 </body>
