--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       <a href="#video">Video</a>
     </h3>
   </div>
-  <div class="content">hello world</div>
+  <div class="content">
+	  <img src="pic_trulli.jpg" alt="Italian Trulli">
+  </div>
   <div class="footer">
     <h4>
       <a href="#about">About Me</a> | 
