--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </h3>
   </div>
   <div class="content">
-	  <img src="pic_trulli.jpg" alt="Italian Trulli">
+	  <img src="raster/welcome.jpg" alt="welcome!">
   </div>
   <div class="footer">
     <h4>
